Bug 1608444 - Make sure the debug-only check only runs the first time the channel is cancelled with a URL classifier blocking error code; r=mayhemer

Differential Revision: https://phabricator.services.mozilla.com/D59904